Bug 1403951 - Stop setting -moz-appearance: none; on :root for lightweight themes as it completely breaks the window when the Windows compositor is enabled. r=johannh
MozReview-Commit-ID: J1UJ6wJ2N4k

UltraBlame original commit: 56ca38c33b965a00186b39082a461784baf9f694

--- a/toolkit/themes/windows/global/global.css
+++ b/toolkit/themes/windows/global/global.css
@@ -715,22 +715,6 @@ root
 moz
 -
 lwtheme
-{
--
-moz
--
-appearance
-:
-none
-;
-}
-:
-root
-:
--
-moz
--
-lwtheme
 -
 darktext
 {
